--- a/src/views/spell/index.css
+++ b/src/views/spell/index.css
@@ -1,7 +1,7 @@
 .spellMain{
   width:100%;
   height:100%;
-  background:rgba(48,44,80,1);
+  background:rgba(247,247,247,1);
   overflow: hidden;
 }
 .language{
@@ -296,7 +296,7 @@ select::-ms-expand { display: none; }
 .IELTSodeTestText{
   margin-left: 1.08rem;
   margin-top: 0.34rem;
-  width:2.56rem;
+  width:2.9rem;
   height:2.78rem;
 }
 .IELTSodeTestText>div:nth-child(1){
@@ -410,7 +410,8 @@ select::-ms-expand { display: none; }
   position: fixed;
   left:0;
   bottom:0;
-  background-color: rgba(0,0,0,1);
+  background:rgba(255,255,255,1);
+  box-shadow:0px 0.04rem 0.2rem 0px rgba(0,0,0,0.1);
   width:100%;
   height:1rem;
   display: flex;
@@ -440,7 +441,7 @@ select::-ms-expand { display: none; }
   font-size:0.28rem;
   font-family:PingFangSC-Medium,PingFang SC;
   font-weight:500;
-  color:rgba(239,221,188,1);
+  color:rgba(51,51,51,1);
   line-height:0.4rem;
   margin-left: 0.44rem;
   margin-top: 0.32rem;
@@ -450,7 +451,7 @@ select::-ms-expand { display: none; }
   font-size:0.44rem;
   font-family:PingFangSC-Medium,PingFang SC;
   font-weight:500;
-  color:rgba(239,221,188,1);
+  color:rgba(255,102,108,1);
 }
 .spellBottom>div:nth-child(2){
   width:30%;
@@ -492,4 +493,20 @@ select::-ms-expand { display: none; }
   line-height: 0.6rem;
   /* border-radius:0px 6px 6px 0px; */
   /* border:1px solid rgba(186,186,186,1); */
+}
+
+.LoginPhoneTosts{
+  width:3.6rem;
+  height:1.12rem;
+  background:rgba(0,0,0,0.7);
+  border-radius:0.16rem;
+  text-align: center;
+  line-height: 1.12rem;
+  font-size:0.32rem;
+  font-family:PingFangSC-Regular,PingFangSC;
+  font-weight:400;
+  color:rgba(255,255,255,1);
+  position: absolute;
+  top:5.5rem;
+  left:1.96rem;
 }
