--- a/src/views/activation/index.css
+++ b/src/views/activation/index.css
@@ -19,7 +19,7 @@
     border-radius:0.16rem;
     margin: 0 auto;
     margin-top: 0.28rem;
-    background-image:url("https://uploader.shimo.im/f/WkXV6VES7jgPnYzn.png!original");
+    background-image:url("../../static/image\ \(1\).png");
     background-size: 100% 100%;
 }
 .ActMain>div:nth-child(2){
