--- a/src/views/activation/index.css
+++ b/src/views/activation/index.css
@@ -98,3 +98,19 @@ textarea{
 .ActMain>span{
     display: none;
 }
+。.LoginPhoneTosts{
+    width:3.6rem;
+    height:1.12rem;
+    background:rgba(0,0,0,0.7);
+    border-radius:0.16rem;
+    text-align: center;
+    line-height: 1.12rem;
+    font-size:0.32rem;
+    font-family:PingFangSC-Regular,PingFangSC;
+    font-weight:400;
+    color:rgba(255,255,255,1);
+    position: absolute;
+    top:5.5rem;
+    left:1.96rem;
+    z-index: 10;
+  }
