--- a/src/views/Assemble/index.css
+++ b/src/views/Assemble/index.css
@@ -43,6 +43,7 @@
   border-radius:0.64rem;
   border:0.16rem solid rgba(255,240,187,1);
   text-align: center;
+  padding-left: 0.2rem;
   line-height: 1rem;
   font-size:0.36rem;
   font-family:PingFangSC-Regular,PingFang SC;
