--- a/src/views/indexHome/index.css
+++ b/src/views/indexHome/index.css
@@ -103,6 +103,7 @@
   margin-top: 0.42rem;
   font-weight: 800;
   font-family:PingFangSC-Medium,PingFang SC;
+  font-size: 0.32rem;
   /* transform:translateY(50%) */
 }
 .curriculum{
