--- a/src/views/indexHome/index.css
+++ b/src/views/indexHome/index.css
@@ -81,7 +81,12 @@
   height:4.44rem;
   background-image: url("../../static/详情14@3x.png");
   background-size: 100% 100%;
-  margin-bottom:2.3rem;
+  /* margin-bottom:2.3rem; */
+}
+.Img15{
+  width:100%;
+  height:0.6rem;
+  background-color: #0B084B;
 }
 .bottom{
   width:100%;
